.k8s/prod/deployment.yaml
#Deployment
apiVersion: apps/v1
kind: Deployment

metadata:
  name: taxonomy
  namespace: taxonomy-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: taxonomy
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: taxonomy
    spec:
      containers:
        - name: taxonomy
          image: DOCKER_IMAGE
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
          # env:
            # - name: DATABASE_PASSWORD
            #   valueFrom:
            #     secretKeyRef:
            #       name: catalog-postgres-postgresql
            #       key: postgres-password
              
      restartPolicy: Always
