.k8s/prod/service.yaml
#Service
apiVersion: v1
kind: Service
metadata:
  labels:
    app: taxonomy
  name: taxonomy
  namespace: taxonomy-prod
spec:
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: taxonomy
