.k8s/prod/ingress.yaml
# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taxonomy-ingress
  namespace: taxonomy-prod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - taxonomy.api.fashionaiale.com
      secretName: taxonomy-tls
  rules:
    - host: taxonomy.api.fashionaiale.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: taxonomy
                port:
                  number: 80
